# python-doctor

./: .gitignore  .python-doctor-publish-seed  pyproject.toml
.github/workflows/: governance-oracles-windows.yml  python-doctor.yml
docs/: HANDOVER.md  PYTHON_DOCTOR_MASTER_PROMPT.md
docs/audits/: 2026-07-14-governance-oracle-review.md  2026-07-14-governance-planning-red-team.md  2026-07-14-preimplementation-adversarial-review.md
docs/design/: proof-carrying-python-architecture.md
docs/evidence/contracts/: phase-01-governance.toml
docs/governance/: requirements-traceability.md
docs/superpowers/plans/: 2026-07-14-python-doctor-analyzer-adapters.md  2026-07-14-python-doctor-phase-01-governance-foundation.md  2026-07-14-python-doctor-policy-scoring.md  2026-07-14-python-doctor-release-1-foundation.md  2026-07-14-python-doctor-sarif-ci.md
evals/: scenarios.md  test_skill_contract.py
scripts/: __init__.py
scripts/governance/: __init__.py  validate_oracles.py
src/python_doctor/: __main__.py  cli.py  config.py  deduplication.py  diagnostics.py  discovery.py  fingerprints.py  policy.py  scanner.py  scoring.py
src/python_doctor/adapters/: __init__.py  bandit.py  (+3 more)
tests/: test_bandit_adapter.py  test_cli.py  test_config.py  test_deduplication.py  test_diagnostics.py  test_discovery.py  test_fingerprints.py  test_github_report.py  test_github_workflow.py  test_governance_oracles.py  test_native_rules.py  test_package_metadata.py  test_policy.py  test_radon_adapter.py  test_reports.py  test_ruff_adapter.py  test_sarif_report.py  test_scanner.py  test_scoring.py
(+20 files in other folders)
