[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "python-doctor"
version = "0.1.0.dev0"
description = "Deterministic Python codebase health scanner"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Python Doctor contributors" }]
dependencies = [
  "tomli>=2.0.1; python_version < '3.11'",
  "ruff==0.15.21",
  "radon==6.0.1",
  "bandit==1.8.6; python_version < '3.10'",
  "bandit==1.9.4; python_version >= '3.10'",
]

[project.scripts]
python-doctor = "python_doctor.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]
